--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sarankirthic@gmail.com
-spring.mail.password=hyri osxl xmor ohlk
+spring.mail.password=${EMAIL_PASSWORD:your_password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -32,6 +32,6 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#
-razorpay.key_id=${RAZOR_PAY_ID:rzp_test_bsbZpZTphceAM9}
-razorpay.key_secret=${RAZOR_PAY_SECRET:zNH3uitbomyOness2n1WBmwm}
+# Razor pay credentials
+razorpay.key_id=${RAZOR_PAY_ID:your_credentials}
+razorpay.key_secret=${RAZOR_PAY_SECRET:your_secret}
